@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="cz.romario.opensudoku"
-      android:installLocation="auto" android:versionCode="1104" android:versionName="1.1.4">
+      android:installLocation="auto" android:versionName="1.1.5" android:versionCode="1105">
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
     <application android:icon="@drawable/opensudoku_logo_72" android:label="@string/app_name">
         <activity android:name=".gui.FolderListActivity"
